# Seventeen29-OS-

./: .gitignore  README.md
backend/: Cargo.toml
backend/migrations/: init_schema.sql
backend/src/: ai_service.rs  api.rs  blueprint.rs  circuit_breaker.rs  commits.rs  data.rs  db.rs  graph_schema.rs  graph_service.rs  main.rs  propagation.rs  publish_api.rs  sync_service.rs
calc-engine/: Cargo.toml
calc-engine/bindings/: FieldDef.ts  IncidentData.ts  ModuleBlueprint.ts  ValidationContext.ts
calc-engine/src/: lib.rs
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: CommandPalette.tsx  Dashboard.tsx  FieldRegistry.tsx  ModuleViewer.tsx  NeuralView.tsx  Sidebar.tsx  StageForm.tsx  StageNavigator.tsx
frontend/src/views/Workshop/: Canvas.tsx  Inspector.tsx  MathField.tsx  Palette.tsx  WorkflowEditor.tsx  WorkshopLayout.tsx
infra/: docker-compose.yml  main.tf  variables.tf
mobile/: App.tsx  package-lock.json  package.json
mobile/src/services/: NeuralService.ts  OpLogService.ts  SyncService.ts
mobile/src/store/: db.ts
scripts/: seed.sh  seed_safety_incident.sh  seed_workflow_test.sh  verify_ai_rca.sh  verify_analytics.sh  verify_neural.sh  verify_rate_limit.sh
