[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "uuid", "time", "json"] }
uuid = { version = "1.0", features = ["serde", "v4"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["json"] }
tower_governor = { version = "0.4", features = ["axum"] }
anyhow = "1.0"
calc-engine = { path = "../calc-engine" }
