[package]
name = "calc-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ts-rs = "10.0" # For auto-generating TS interfaces
meval = "0.2" # For math expression evaluation

[profile.release]
# Optimize specifically for WASM size/speed
lto = true
opt-level = 3
codegen-units = 1
